// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`snapshot tests renders component correctly if we provide efficient props in horizontal 1`] = `
<vueslider-stub
  class="slider"
  clickable="true"
  direction="ltr"
  dotsize="12"
  duration="0.5"
  enablecross="true"
  height="4"
  interval="0.001"
  max="1"
  min="0"
  order="true"
  process="true"
  processstyle="[object Object]"
  railstyle="[object Object]"
  style="padding: 0px;"
  tooltip="none"
  value="0.3"
  width="auto"
/>
`;

exports[`snapshot tests renders component correctly if we provide efficient props in vertical 1`] = `
<vueslider-stub
  class="slider"
  clickable="true"
  direction="btt"
  dotsize="12"
  duration="0.5"
  enablecross="true"
  height="126"
  interval="0.001"
  max="1"
  min="0"
  order="true"
  process="true"
  processstyle="[object Object]"
  railstyle="[object Object]"
  style="padding: 0px;"
  tooltip="none"
  value="0.3"
  width="4"
/>
`;
